--- a/Django19/templates/news.html
+++ b/Django19/templates/news.html
@@ -19,7 +19,7 @@
             {% endif %}
 
             <span class="current">
-                Страница {{ page_news.number }} из {{ page_news.paginator.num_pages }}.
+                Страница <b>{{ page_news.number }}</b> из <b>{{ page_news.paginator.num_pages }}</b>.
             </span>
 
             {% if page_news.has_next %}
